perubahan rumus pagination
